--- a/index.html
+++ b/index.html
@@ -3,45 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Website</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>Portfolio Website</title>
 </head>
 <body>
-    <header class="header">
-        <a href="#" class="logo">S.MATHO</a>
-        <nav class="navbar">
-
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-            <a href="#">Portfolio</a>
-        </nav>
-    </header>
-    <section class="home">
-        <div class="home image"></div>
-        <div class="home-content">
-            <div class="heading">
-                <h1>Hi, I am Siqhamo Matho</h1>
+    <div class="header">
+        <div class="main">
+            <div class="navbar">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">PROJECTS</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">CONTACT US</a></li>
+                </ul>
             </div>
-            <h3>FullStack Developer</h3>
-            <p> I am a highly skilled and versatile professional with expertise in both front-end and back-end development.<br> With a passion for crafting seamless and interactive web experiences,<br> I bring a wealth of knowledge and hands-on experience to every project I undertake.</p>
-            
-            <section class="Profile">
-                <div class="section_piccontainer">
-                    <img src="IMG-20220609-WA0036~2.jpg" alt="my profile picture" width="300" height="250">
-                </div>
-            </section>
-
-            <div class="home-sci">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+            <div class="img">
+                <img src="IMG-20220609-WA0036~2.jpg" alt="Portfolio Image">
             </div>
-            <a href="#" class="btn">Download Cv></a>
+            <div class="left-text">
+                <p><span class="hello-text">HELLO</span></p>
+                <p>THIS IS <span class="name">SIQHAMO MATHO</span> AND</p>
+                <p>I AM A PROFESSIONAL</p>
+                <p class="webd">WEB DEVELOPER</p>
+            </div>
         </div>
+    </div>
+    <section class="PROJECTS">
+      <div class="project-div">
+        <div class="text-heading">
+            <h1 class="heading">Projects</h1>
+        </div>
+      </div>  
+      <div class="project-image">
+        <div class="projects">
+            <a href=""><img src="webpage shows.jpg"></a>
+            <a href=""><img src="techtronics webpage.PNG"></a>
+        </div>
+      </div>
     </section>
+
+    <div class="footer">
+        <ul class="social-icons">
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        <p>&copy;2024 SIQHAMO.All Rights are reserved</p>
+    </div>
 </body>
 </html>
+
+     
