--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">PROJECTS</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">EXPERIENCE</a></li>
+                    <li><a href="#">ABOUT ME</a></li>
+                    <li><a href="#">CONTACT </a></li>
                 </ul>
             </div>
             <div class="img">
@@ -43,16 +43,52 @@
         </div>
       </div>
     </section>
+    <section class="experience" id="experience">
+        <div class="experience-div">
+            <div class="heading">EXPERIENCE</div>
+            <div class="all-experience">
+                <div class="img-grid">
+                    <img src="html image.jpg" alt="HTML Image description">
+                    <p>It's the standard markup language used to create and design web pages.</p>
+                </div>
+                <div class="img-grid">
+                    <img src="css image.jpg" alt="CSS Image description">
+                    <p> It is a language used for describing the presentation of a document written in HTML</p>
+                </div>
+                <div class="img-grid">
+                    <img src="Js image.jpg" alt="JavaScript Image description">
+                    <p>JS is a versatile programming language primarily used for web development.</p>
+                </div>
+                <div class="img-grid">
+                    <img src="Node image.jpg" alt="Node.js Image description">
+                    <p>
+                        Node.js is a runtime environment that allows you to run JavaScript code outside of a web browser.</p>
+                </div>
+            </div>
+        </div>
+    
+    </section>
+    <section class="about-me" id="about-me">
+        <div class="aboutme-div">
+            <h1 class="heading">ABOUT ME</h>
+                <div class="deatils">
+                <div class="left-image">
+                 <img src="my pic 2.jpg">   
+                </div>
+                 
+                <div class="right-text">
+                    <h2>My name is SIQHAMO MATHO</h2>
+                    <p>I am a creative designer,</p>
+                    <p>FrontEnd Web Developer</p>
+                    <button><a href="CV-Siqhamo Word (2).docx" download="">DOWNLOAD CV</a></button>   
+                   </div>
 
-    <div class="footer">
-        <ul class="social-icons">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-        <p>&copy;2024 SIQHAMO.All Rights are reserved</p>
-    </div>
+                </div>
+                </div>
+                </div>
+        </div>
+
+    </section>
 </body>
 </html>
 
